# negotiation-env

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.py  graders.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_api.py  test_smoke.py  test_tasks.py
data/: scenarios.json
server/: app.py
