[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "negotiation-env"
version = "0.1.0"
description = "AI Negotiation Environment for OpenEnv Hackathon"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.31.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
]